k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: amitdalal/alpine-nginx-php:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "0.2"
        ports:
        - containerPort: 8080
