k8s/hello_gke_ing_deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: amitdalal/alpine-nginx-php:latest
        ports:
        - containerPort: 8080
