k8s/hello_gke_ing_ing.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: myapp
          servicePort: 80
